Enhance insights tool with new agents for generating and consolidating insights from SQL query results. Updated dependencies in pyproject.toml, improved README documentation, and refined error handling in LLM interactions. Added logging setup and database configuration for better integration.

--- a/insights/pyproject.toml
+++ b/insights/pyproject.toml
@@ -12,8 +12,11 @@ authors = [
     {name = "Arshath", email = "marshath@gmail.com"},
 ]
 dependencies = [
+    "chromadb>=1.0.4",
+    "nltk>=3.9.1",
     "openai>=1.73.0",
     "python-dotenv>=1.1.0",
+    "scikit-learn>=1.6.1",
     "vanna>=0.7.9",
 ]
 
