Update dependencies in pyproject.toml to include aiohttp and pip. Revise README.md to enhance project description, features, and usage instructions, providing clearer guidance on the application’s capabilities and architecture. Update project structure for improved organization and clarity. Enhance documentation for configuration and usage of the Gradio interface.

--- a/ResearchTrader/pyproject.toml
+++ b/ResearchTrader/pyproject.toml
@@ -20,8 +20,9 @@ dependencies = [
     "arxiv>=2.2.0",
     "PyPDF2>=3.0.0",
     "pdfminer.six>=20221105",
-    "python-multipart>=0.0.5",  # For file uploads
-
+    "python-multipart>=0.0.5", # For file uploads
+    "aiohttp>=3.11.16",
+    "pip>=25.0.1",
 ]
 
 [project.optional-dependencies]
